# cloud-client-apk

./: .gitattributes  .gitignore  .gitmodules  updateVersionName.sh
Colorful/: settings.gradle
Colorful/app/: build.gradle
LifeCycleSync/: key.jks  settings.gradle  usage.md
LifeCycleSync/app/: build.gradle
aic-application/: 0001-Update-the-UI-style.patch  LICENSE  build.gradle  mediaCodec.xml  readme.txt  settings.gradle
aic-application/app/: build.gradle  proguard-rules.pro
aic-application/commonlibrary/: build.gradle  proguard-rules.pro
aic-application/mycommonlibrary/: build.gradle  proguard-rules.pro
ios-client/: README.md
ios-client/OWTP2P.xcworkspace/: contents.xcworkspacedata
linux-client/: AudioPlayer.cpp  AudioPlayer.h  CGCodec.cpp  CGCodec.h  CMakeLists.txt  Common.h  EncodedVideoDispatcher.cpp  EncodedVideoDispatcher.h  GameSession.cpp  GameSession.h  PcObserver.h  README.md  VideoDecoder.cpp  VideoDecoder.h  VideoDecoderDispatcher.cpp  VideoDecoderDispatcher.h  VideoDirectRender.cpp  VideoDirectRender.h  VideoDispatcher.cpp  VideoDispatcher.h  VideoRender.cpp  VideoRender.h  aic_client_render.cpp  aic_client_render.h  aic_linux_client.cpp  owt_linux_client.cpp  owt_signalingchannel.cpp  owt_signalingchannel.h
linux-client/include/owt/base/: commontypes.h  stream.h  videodecoderinterface.h
linux-client/include/owt/p2p/: p2pclient.h
linux-client/include/webrtc/api/: peer_connection_interface.h  peer_connection_proxy.h
linux-client/include/webrtc/api/video_codecs/: video_decoder.h
linux-client/lib/: libavdevice.so.58  libavdevice.so.58.8.100  libavfilter.so.7.57.100  libavformat.so.58.29.100  libavutil.so.56  libavutil.so.56.31.100  libsioclient.so.1  libsioclient_tls.so.1.6.0  libswresample.so.3.5.100  libswscale.so.5  libswscale.so.5.5.100
linux-client/owt-patches/: 0001-Owt-enable-suspend-unsuspend-receiving-video-stream.patch  0001-decoded-frame-to-render-on-linux.patch
owt-client-android/: README.md
owt-client-android/patches/: 0001-Enable-second-data-channel-for-owt-android-sdk.patch  0002-Fix-the-garbled-message-from-the-streamer-by-getting.patch  0003-Remove-offerToReceiveAudio-and-offerToReceiveVideo.patch  0004-Upgrade-socket.io-client-from-1.0.1-to-2.0.1.patch  0005-Add-getVideoEncoderFactory-and-getVideoDecoderFactor.patch  0006-Update-owt-Android-SDK-to-31.patch  0007-Stop-a-transceiver-if-its-direction-is-inactive.-286.patch  0008-Create-transceivers-explicitly.-287.patch  0009-Dont-cache-RtpSenders-in-SDK.patch
owt-client-native/: .gclient  .gclient_entries  README.md
owt-client-native/patches/: 0001-Add-talk-owt-patches-0015-Adopt-SingletonSurfaceView.patch  0002-Add-talk-owt-patches-0016-Use-AToU-to-print-trace.pa.patch  0003-Add-talk-owt-patches-0017-Support-OMX.Intel.hw_ve.h2.patch  0004-Add-talk-owt-patches-0018-Support-OMX.Intel.hw_ve.h2.patch  0005-Add-talk-owt-patches-0019-Support-h264-and-hevc-of-M.patch  0006-Add-talk-owt-patches-0020-Add-atrace-points-for-came.patch  0007-Remove-talk-owt-patches-0015-Adopt-SingletonSurfaceV.patch  0008-Add-and-update-talk-owt-patches-0021-Fix-display-is-.patch  0008-Add-talk-owt-patches-0021-Fix-display-is-incomplete..patch  0009-Add-talk-owt-patches-0022-Implemented-the-new-transp.patch  0010-Add-talk-owt-patches-0023-Add-atrace-point-that-is-a.patch  0011-Alpha-transparent-is-triggered-by-the-change-of-buff.patch  0012-Add-talk-owt-patches-0025-Enable-TCAE-in-webrtc.patc.patch  0013-Add-talk-owt-patches-0026-Set-ContentHint-kDetailed-.patch  0014-Add-talk-owt-patches-0027-Dynamic-switch-the-orienta.patch  0015-Add-talk-owt-patches-0028-enable-e2e-latency-telemet.patch  (+4 more)
thin_client_v2/: .gclient  avc_streamout_demo  ias.conf  object_detection.tar  setup.sh  start_ias.sh  weston.ini
thin_client_v2/.cipd/: tagcache.db
windows-client/: README.md  gawebrtcclient.sln
(+926 files in other folders)
